Wrapper script should be calling ${JAVA_HOME}/bin/java instead of java